# open-virome-mcp

./: .example.env  .pylintrc  LICENSE  README.md  pyproject.toml  server-config.json
.github/workflows/: pylint.yml
src/: server.py
src/prompts/: metadata_analysis.py  register.py  summarize.py
src/resources/: ncbi.py  neo4j.py  psql.py  register.py
src/tools/: llm.py  openvirome.py  register.py  utils.py
src/tools/workflows/: metadata_anomaly.py  metadata_counts.py  mwas.py  register.py  state.py  utils.py  virus_metadata_analysis.py
