[project]
name = "open-virome-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bio>=1.8.0",
    "black>=25.1.0",
    "dotenv>=0.9.9",
    "mcp[cli]",
    "neo4j>=5.28.1",
    "psycopg2>=2.9.10",
    "pylint>=3.3.7",
    "requests>=2.32.4",
]
